[project]
name = "radiography_research"
version = "0.1.0"
description = "radiography_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.3",
]

[project.scripts]
radiography_research = "radiography_research.main:run"
run_crew = "radiography_research.main:run"
train = "radiography_research.main:train"
replay = "radiography_research.main:replay"
test = "radiography_research.main:test"
run_with_trigger = "radiography_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
